--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 <body>
     <header>
         <h1 class="title">Choose your fate ...</h1>
-         <h2>about</h2>
+
       </header>  
   <main id="game-msg">     
-      <button id="btn1"></button>
-      <button id="btn2"></button>
+      <button class = "btn1"></button>
+      <button class = "btn2"></button>
 </body>
 </html>
