--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="game.css">
     <link href="https://fonts.googleapis.com/css?family=Creepster&display=swap" rel="stylesheet">
-
+    <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond&display=swap" rel="stylesheet">
     <title>CYF</title>
 </head>
 <body>
+       
     <header>
         <h1 class="title">Choose your fate ...</h1>
 
