--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
 
       </header>  
   <section id="game">   
-      <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.  </p>  
-    
+      <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae voluptatum minus temporibus dolore quam magni, quasi sint saepe! Magni deleniti reprehenderit commodi, eius expedita vero veniam sint facilis illum ad! </p>
       <button id ="btn1">choose </button>
       <button id ="btn2">wisely</button>
 </section>
