--- a/index.html
+++ b/index.html
@@ -16,7 +16,14 @@
 
       </header>  
   <section id="game">   
-      <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae voluptatum minus temporibus dolore quam magni, quasi sint saepe! Magni deleniti reprehenderit commodi, eius expedita vero veniam sint facilis illum ad! </p>
+      <p> “Walls have ears.
+        Doors have eyes.
+        Trees have voices.
+        Beasts tell lies.
+        Beware the rain.
+        Beware the snow.
+        Beware the man
+        You think you know.” </p>
       <button id ="btn1">choose </button>
       <button id ="btn2">wisely</button>
 </section>
