--- a/index.html
+++ b/index.html
@@ -9,10 +9,13 @@
     <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond&display=swap" rel="stylesheet">
     <title>CYF</title>
 </head>
+<script defer src="game.js"></script>
+
 <body>
        
     <header>
         <h1 class="title">Choose your fate ...</h1>
+        
 
       </header>  
   <section id="game">   
@@ -27,5 +30,6 @@
       <button id ="btn1">choose </button>
       <button id ="btn2">wisely</button>
 </section>
+<footer><button>START</button><button>RESET</button></footer>
 </body>
 </html>
