--- a/index.html
+++ b/index.html
@@ -30,6 +30,6 @@
       <button id ="btn1">choose </button>
       <button id ="btn2">wisely</button>
 </section>
-<footer><button>START</button><button>RESET</button></footer>
+<footer><button id="start">START</button><button id="reset">RESET</button></footer>
 </body>
 </html>
