--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
       </header>  
   <section id="game">   
-      <p> “Walls have ears.
+      <p id="gamemsg"> “Walls have ears.
         Doors have eyes.
         Trees have voices.
         Beasts tell lies.
