fixes render function

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
        
     <header>
         <h1 class="title">Choose your fate ...</h1>
-        
+        <h2 id = "status"> </h2>
 
       </header>  
   <section id="game">   
@@ -27,8 +27,8 @@
         Beware the snow.
         Beware the man
         You think you know.” </p>
-      <button id ="btn1">choose </button>
-      <button id ="btn2">wisely</button>
+      <button id ="btn1"> </button>
+      <button id ="btn2"> </button>
 </section>
 <footer><button id="start">START</button><button id="reset">RESET</button></footer>
 </body>
