--- a/index.html
+++ b/index.html
@@ -30,6 +30,14 @@
       <button id ="btn1"> </button>
       <button id ="btn2"> </button>
 </section>
+
 <footer><button id="start">START</button><button id="reset">RESET</button></footer>
+<audio
+        controls
+        src="assests/412224__inspectorj__creepy-lullaby-a.wav"
+            Your browser does not support the
+            <code>audio</code> element.
+    </audio>
 </body>
+
 </html>
